--- a/saiku-ui/index.html
+++ b/saiku-ui/index.html
@@ -812,7 +812,7 @@ title="Drill across on cell"></a></li>
                         &nbsp;
                     </div>
                     <div class="totals_container all_metrics_container">
-                        <strong>All Measures - </strong>
+                        <strong class='i18n'>All Measures - </strong>
                         <label for="show_totals" class="i18n">Sub totals</label>
                         <select class="form-control" id="all_measures_select">
                             <option class="i18n" value="not" selected="selected">None</option>
