--- a/saiku-ui/index.html
+++ b/saiku-ui/index.html
@@ -478,33 +478,33 @@
 
 <script type="text/x-jquery-tmpl" id="template-workspace-dropzones">
         <div class="workspace_fields disabled">
-            <div class="fields_list details_fields" title="DETAILS">
+            <div class="fields_list i18n details_fields i18n" title="DETAILS">
                 <div class="fields_list_header measure_fields disabled_toolbar"><span class="i18n">Measures</span><span class="dropdown"></span></div>
-                <div class="fields_list_body details">
+                <div class="fields_list i18n_body details">
                     <ul class="connectable"></ul>
                 </div>
                 <span class="clear_axis i18n hide" title="Clear Axis"></span>
                 <div class="clear"></div>
             </div>
-            <div class="fields_list columns_fields" title="COLUMNS">
-                <div class="fields_list_header axis_fields_header disabled_toolbar"><span class="i18n">Columns</span><span class="dropdown"></span></div>
-                <div class="fields_list_body columns axis_fields">
+            <div class="fields_list i18n columns_fields i18n" title="COLUMNS">
+                <div class="fields_list i18n_header axis_fields_header disabled_toolbar"><span class="i18n">Columns</span><span class="dropdown"></span></div>
+                <div class="fields_list i18n_body columns axis_fields">
                     <ul class="connectable"></ul>
                 </div>
                 <span class="clear_axis i18n hide" title="Clear Axis"></span>
                 <div class="clear"></div>
             </div>
-            <div class="fields_list rows_fields" title="ROWS">
-                <div class="fields_list_header axis_fields_header disabled_toolbar"><span class="i18n">Rows</span><span class="dropdown"></span></div>
-                <div class="fields_list_body rows axis_fields">
+            <div class="fields_list i18n rows_fields i18n" title="ROWS">
+                <div class="fields_list i18n_header axis_fields_header disabled_toolbar"><span class="i18n">Rows</span><span class="dropdown"></span></div>
+                <div class="fields_list i18n_body rows axis_fields">
                     <ul class="connectable"></ul>
                 </div>
                 <span class="clear_axis i18n hide" title="Clear Axis"></span>
                 <div class="clear"></div>
             </div>
-            <div class="fields_list filter_fields" title="FILTER">
-                <div class="fields_list_header axis_fields_header disabled_toolbar"><span class="i18n">Filter</span><span class="dropdown"></span></div>
-                <div class="fields_list_body filter axis_fields">
+            <div class="fields_list i18n filter_fields i18n" title="FILTER">
+                <div class="fields_list i18n_header axis_fields_header disabled_toolbar"><span class="i18n">Filter</span><span class="dropdown"></span></div>
+                <div class="fields_list i18n_body filter axis_fields">
                     <ul class="connectable"></ul>
                 </div>
                 <span class="clear_axis i18n hide" title="Clear Axis"></span>
